# geneducks

./: CMakeLists.txt  extension_config.cmake  vcpkg.json
src/: geneducks_extension.cpp
src/include/: geneducks_extension.hpp
